classDiagram
    direction LR

    %% Credits
    %%note "Updated by Gemini (Google AI) in collaboration with the user.\nReflecting current domain model state." as Credits

    %% Entities
    class Account {
        +int id
        +int user_id
        +Decimal balance
        +datetime created_at
        +deposit(amount: Decimal)
        +withdraw(amount: Decimal)
    }

    class Transaction {
        <<abstract>>
        #int id
        #int _account_orig_id
        #int _account_dest_id
        #Decimal _amount
        #TransactionStatus _status
        #datetime _timestamp
        +__init__(transaction_id: int|None, account_orig_id: int, account_dest_id: int, amount: Decimal, timestamp: datetime|None, status: TransactionStatus|None)
        +create(transaction_id: int|None, account_orig: Account, account_dest: Account, amount: Decimal, timestamp: datetime|None): Self
        +account_orig_id: int
        +account_dest_id: int
        +amount: Decimal
        +type: TransactionType
        +id: int|None
        +timestamp: datetime|None
        +status: TransactionStatus
        #_operate(account_orig: Account, account_dest: Account): TransactionResult
        #_build_result(status: TransactionStatus, message: str): TransactionResult
        +__eq__(other)
        +__repr__()
    }

    class Credit {
        +TransactionType _transaction_type = CREDIT
        +type: TransactionType
        #_operate(account_orig: Account, account_dest: Account): TransactionResult
    }

    class Debit {
        +TransactionType _transaction_type = DEBIT
        +type: TransactionType
        #_operate(account_orig: Account, account_dest: Account): TransactionResult
    }

    class Transference {
        +TransactionType _transaction_type = TRANSFERENCE
        +type: TransactionType
        #_operate(account_orig: Account, account_dest: Account): TransactionResult
    }

    %% Value Objects
    class Amount {
        <<ValueObject>>
        +Decimal value
        +validate(value: Decimal): Decimal
    }

    class Balance {
        <<ValueObject>>
        +Decimal value
        +validate(value: Decimal): Decimal
    }

    class TransactionResult {
        <<ValueObject>>
        +str status
        +str message
        +int transaction_id
        +TransactionType transaction_type
        +Decimal amount
        +int account_orig_id
        +int account_dest_id
        +datetime timestamp
    }

    class TransactionType {
        <<enumeration>>
        CREDIT
        DEBIT
        TRANSFERENCE
    }

    class TransactionStatus {
        <<enumeration>>
        CREATED
        COMPLETED
        FAILED
        REVERTED
    }

    %% Exceptions
    class TransactionException {
        <<exception>>
    }
    class InvalidId { <<exception>> }
    class InvalidAccount { <<exception>> }
    class SameAccountException { <<exception>> }
    class InvalidAmount { <<exception>> }
    class InsufficientFundsException { <<exception>> }

    %% Relationships
    Transaction <|-- Credit
    Transaction <|-- Debit
    Transaction <|-- Transference

    Transaction ..> Account : "references account IDs"
    Transaction o-- Amount : "_amount"
    Account o-- Balance : "balance"

    Transaction ..> TransactionResult : "returns"
    Transaction ..> TransactionException : "throws"

    TransactionException <|-- InvalidId
    TransactionException <|-- InvalidAccount
    TransactionException <|-- SameAccountException
    TransactionException <|-- InvalidAmount
    TransactionException <|-- InsufficientFundsException

    TransactionResult --> TransactionType
    TransactionResult --> TransactionStatus
    TransactionResult --> Amount

    Transaction --> TransactionType : "gets type from subclass"
    Transaction --> TransactionStatus : "manages status"